--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -761,7 +761,25 @@
   <script src="assets/js/swipper.js"></script>
 
   <script src="assets/js/blog.js"></script>
-
+<div class="box">
+	<p class="heading">FAQs</p>
+		<div class="faqs">
+			<details>
+				<summary>What is Hacktoberfest?</summary>
+				<p class="text">Hacktoberfest is a month-long open source contribution program. This encourages developers from around the world to contribute to open source projects and solve some real-lisfe problems.</p>
+			</details>
+			<details>
+				<summary>Who can participate in Hacktoberfest?</summary>
+				<p class="text">Hacktoberfest is open to every individual from around the world. Whether you are a beginner or an advanced level programmer, you can contribute to the projects depending upon your skills.</p>
+			</details>
+			<details>
+				<summary>What is new in Hacktoberfest 2022 ?</summary>
+				<p class="text">Hacktoberfest 2022 gives you the privilege to make non code contributions and contribute to the open-source projects throung writing blog posts, translating content and also by graphic design.</p>
+			</details>
+	</div>
+	</div>
+	</div>
+</div>
 
 </body>
 
